--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,20 +1,13 @@
-## [imcomp-2.0.1] - Not Released Yet
- * native installer for windows
- * updated UI for Traherne project
+Note: version A.B.C corresponds to:
+  A : the major version number of imcomp server
+  B : the minor version number of imcomp server
+  C : the version number for client user interfaces of imcomp and traherne
 
-## [imcomp-2.0.0] - November 07, 2017
- * native installer for Windows for testing by Traherne project
-
-## [imcomp-2.0.0-beta] - October 02, 2017
- * standalone tool with web browser based user interface
- * based on via2 initial codebase (region drawing, zoom, etc)
- * released for initial testing by Trahern project
-
-## [v1.0.0] - August 02, 2017
- * web based user interface to upload and compare images
- * for internal testing only (deployed using zeus.robots.ox.ac.uk)
- * features similar to the MATLAB based image comparison tool developed by Joon Son Chung for the Trahern project
-
-## [v1.0.0-beta] - June 01, 2017
- * the original relja_register codebase
- * developed by Relja Arandjelovic during his DPhil / Postdoc at the Visual Geometry Group, Department of Engineering Science, University of Oxford.
+  
+## [imcomp_server-2.0.x] - Not Released Yet
+ * code natively compiles in Linux, Windows and MacOS
+ * native installers for Windows and MacOS
+ * new c++ based implementations:
+   - normalized direct linear transform (DLT) algorithm
+   - thin plate spline (TPS) based registration
+ * sift features are calculated using vlfeat library
